TelcoServiceFactory - Eliminada invocación deprecada a método newInstance de la clase Class.